dim/spec/test_input/invalid_input/modules/duplicate_keys.dim
document: test

test_id_1:
  text: some text
  review_status: unclear
  text: some other text
